# E-Council

./: .env.example  .gitignore  ARCHITECTURE.md  DESIGN.md  HAND-OVER.md  PROGRESS.md  README.md  REFACTORING_ANALYSIS.md  REFACTORING_SUMMARY.md  TESTING.md  app.py  app_factory.py  extensions.py  models.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  routes.py  run_tests.py  seed.py  tasks.py  wsgi.py
api/: __init__.py  database.py  dependencies.py  emails.py  exceptions.py  main.py  settings.py
config/: __init__.py  config.py
docs/: API.md  ARCHITECTURE.md  DESIGN.md  HAND-OVER.md  IMPROVEMENT_ANALYSIS.md  PROGRESS.md  ROADMAP.md  TESTING.md
forms/: __init__.py  auth.py  board_resolutions.py  concept_papers.py  documentation.py  events.py  financial.py  meetings.py  validators.py
frontend/: .env.e2e  .env.example  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
models/: __init__.py  activity_report_item.py  audit.py  base.py  board_resolution.py  concept_paper.py  department.py  documentation.py  evaluation_form.py  event.py  financial.py  learning_outcome.py  meeting.py  meeting_attendee.py  objective.py  tally_item.py  transaction.py  user.py
ms-word-templates/: concept-paper-with-header-and-footer-template.docx  minutes-of-the-meeting-with-header-and-footer-template.docx
repositories/: __init__.py  base.py  users.py
routes/: __init__.py  account.py  admin.py  auth.py  board_resolutions.py  concept_papers.py  dashboard.py  events.py  (+4 more)
(+375 files in other folders)
